# co-proj-2

./: .gitignore  export_model_to_cpp.py  features_from_test_case.cpp  generate_packs.py  generate_tests.py  generate_training_data.py  hlipp.cpp  model_weights.h  pyproject.toml  simple_nn_model.pth  solution_nn_beam.cpp  solution_nn_dfs.cpp  solution_nn_ga.cpp  train.py
data/: features_pack_1763733893.txt  output_pack_1763733893.txt  output_pack_1763736842.txt  output_pack_1763749469.txt  output_pack_1763768526.txt  output_pack_1763769797.txt  output_pack_1763780555.txt
